--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menunavbar" id="menunavbar"><span class="navbar-toggler-icon"></span></button>
         </div>
         <div class="collapse navbar-collapse" id="menunavbar">
-          <div class="navbar-nav">
-            <a href="index.html" class="nav-link active">HOME</a>
-            <a href="equipe.html" class="nav-link">EQUIPE</a>
-            <a href="servico.html" class="nav-link">SERVIÇOS</a>
-            <a href="sobre.html" class="nav-link">SOBRE</a>
-            <a href="contato.html" class="nav-link">CONTATO</a>
+          <div class="navbar-nav text-center" style="position: absolute; right: 25vh;">
+            <a href="index.html" class="nav-link active fs-5">HOME</a>
+            <a href="equipe.html" class="nav-link fs-5">EQUIPE</a>
+            <a href="servico.html" class="nav-link fs-5">SERVIÇOS</a>
+            <a href="sobre.html" class="nav-link fs-5">SOBRE</a>
+            <a href="contato.html" class="nav-link fs-5">CONTATO</a>
         </div>
         
-        <div class="d-flex ms-auto align-items-center gap-2">
-            <button type="button" class="btn btn-outline-primary botao1"><i class="bi bi-person-fill"></i> Login</button>
-            <button type="button" class="btn btn-outline-primary botao2"><i class="bi bi-calendar"></i> Agendar</button>
+        <div class="d-flex ms-auto align-items-center gap-3">
+            <button type="button" class="btn btn-outline-primary botao1"><i class="bi bi-person-fill"> Login</i></button>
+            <button type="button" class="btn btn-outline-primary botao2"><i class="bi bi-calendar"> Agendar</i></button>
         </div>        
         </div>
     </nav>
@@ -142,8 +142,9 @@
       <div class="col-12 col-md-6 col-lg-4">
         <div class="bg-dark d-flex flex-column p-4 h-100 rounded shadow-sm">
           <h3 class="text-white mb-3">Serviços Disponíveis</h3>
-          <div class="mb-3">
-            <input type="text" class="form-control bg-light border-0" placeholder="Data da Consulta" style="height: 40px;">
+          <div class="date mb-3" id="date" data-target-input="nearest">
+            <input type="date" class="form-control bg-light border-0 datetimepicker-input"
+             placeholder="Data da Consulta" data-target="#date" data-toggle="datetimepicker" style="height: 40px;">
           </div>
           <select class="form-select bg-light border-0 mb-4" style="height: 40px;">
             <option selected>Selecionar tipo de serviço</option>
@@ -199,7 +200,42 @@
 </div>
 <!-- Fim da Propaganda -->
 
-  <!-- Apartir daqui começa o Rodapé da pagina. -->
+<!-- Segundo carrossel -->
+
+    <div class="container-fluid bg-primary bg-testimonial my-5">
+        <div class="container py-5">
+            <div class="row justify-content-center">
+                <div class="col-lg-10">
+                  <h1 class="text-center text-white py-4 fs-2"><i>Nosso hambiente sempre será o mais acolhedor e confortavel possivel para a melhor experiência</i></h1>
+                    <div id="carouselExample" class="carousel slide">
+                      <div class="carousel-inner">
+                        <div class="carousel-item">
+                          <img src="./img/Clinica foto.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="./img/Clinica foto 2.png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item active">
+                          <img src="./img/Fisioterapeutas na clinica.png" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
+                  </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- Fim do segundo carrossel -->   
+
+<!-- Apartir daqui começa o Rodapé da pagina. -->
 
 <footer class="bg-light text-center text-lg-start mt-auto">
         <div class="container p-4">
@@ -245,7 +281,6 @@
           © 2025 Fisiovida. Todos os direitos reservados.
         </div>
       </footer>
-  
-    <!-- Fim do Rodapé da pagina. -->
+<!-- Fim do Rodapé da pagina. -->
 </body>
 </html>
