--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h1 class="display-5 text-white mb-md-2">Cuide da sua saúde hoje mesmo, agende sua sessão de fisioterapia online com rapidez e segurança!</h1>
             <div class="position-relative" style="position: absolute; right: 2%;">
             <button type="button" class="btn btn-primary btn-lg p-3 py-md-3 px-md-5 me-3">Agendar agora</button>
-            <button type="button" class="btn btn-secondary btn-lg p-3 py-md-3 px-md-5 me-3">Saiba mais</button>
+            <a href="./sobre.html"><button type="button" class="btn btn-secondary btn-lg p-3 py-md-3 px-md-5 me-3">Saiba mais</button></a>
             </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
             <h1 class="display-5 text-white mb-md-2">Saúde e recuperação em primeiro lugar, fisioterapia profissional que você pode confiar.</h1>
              <div class="position-relative" style="position: absolute; right: 2%;">
             <button type="button" class="btn btn-primary btn-lg p-3 py-md-3 px-md-5 me-3">Agendar agora</button>
-            <button type="button" class="btn btn-secondary btn-lg p-3 py-md-3 px-md-5 me-3">Saiba mais</button>
+            <a href="./sobre.html"><button type="button" class="btn btn-secondary btn-lg p-3 py-md-3 px-md-5 me-3">Saiba mais</button></a>
             </div>
         </div>
       </div>
@@ -192,7 +192,7 @@
     <div class="col-12 col-lg-6 text-center">
       <img src="./img/ChatGPT Image 23 de set. de 2025, 15_28_44.png" 
            alt="imagem" 
-           class="img-fluid rounded shadow opacity-75" 
+           class="img-fluid rounded shadow" 
            style="object-fit: cover; max-height: 400px;">
     </div>
 
