--- a/sobre.html
+++ b/sobre.html
@@ -39,27 +39,38 @@
 
 <!-- Barra de navegação do site. -->
 
-    <nav class="navbar bg-light navbar-expand-lg sticky-xxl-top">
-        <div class="container">
-            <a href="" class="navbar-brand d-flex align-items-center">
-                <img src="./img/Fisiovida logo.png" alt="imagemfisiovida" class="imagem" width="120" height="90">
-            </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menunavbar" id="menunavbar"><span class="navbar-toggler-icon"></span></button>
-        </div>
-        <div class="collapse navbar-collapse" id="menunavbar">
-            <div class="navbar-nav">
-                <a href="index.html" class="nav-link">HOME</a>
-                <a href="equipe.html" class="nav-link">EQUIPE</a>
-                <a href="servico.html" class="nav-link">SERVIÇOS</a>
-                <a href="sobre.html" class="nav-link active">SOBRE</a>
-                <a href="contato.html" class="nav-link">CONTATO</a>
-            </div>
-        <div class="collapse navbar-collapse ">
-            <button type="button" class="btn btn-outline-primary botao1"><i class="bi bi-person-fill"> Login</i></button>
-            <button type="button" class="btn btn-outline-primary botao2"><i class="bi bi-calendar"> Agendar</i></button>
-        </div>
-        </div>
-    </nav>
+    <!-- Barra de navegação do site. -->
+
+<nav class="navbar navbar-expand-lg bg-light sticky-xxl-top">
+  <div class="container d-flex justify-content-between align-items-center">
+    <!-- Logo colado à esquerda -->
+    <a href="#" class="navbar-brand">
+      <img src="./img/Fisiovida logo.png" alt="imagemfisiovida" width="120" height="90">
+    </a>
+
+    <!-- Botão toggle para mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menunavbar" aria-controls="menunavbar" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Menu e botões alinhados à direita -->
+    <div class="collapse navbar-collapse justify-content-end" id="menunavbar">
+      <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
+        <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
+        <li class="nav-item"><a href="equipe.html" class="nav-link">EQUIPE</a></li>
+        <li class="nav-item"><a href="servico.html" class="nav-link ">SERVIÇOS</a></li>
+        <li class="nav-item"><a href="sobre.html" class="nav-link active">SOBRE</a></li>
+        <li class="nav-item"><a href="contato.html" class="nav-link">CONTATO</a></li>
+      </ul>
+
+      <div class="d-flex gap-2 ms-3">
+        <button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button>
+        <button type="button" class="btn btn-outline-primary"><i class="bi bi-calendar"></i> Agendar</button>
+      </div>
+    </div>
+  </div>
+</nav>
+
 
 <!-- Pagina do site. -->
 
