--- a/paciente/equipe.html
+++ b/paciente/equipe.html
@@ -67,8 +67,9 @@
         <li class="nav-item"><a href="contato.html" class="nav-link">CONTATO</a></li>
       </ul>
 
-      <div class="d-flex">
-        <a href="login.html" class="btn btn-outline-primary">LOGIN</a>
+      <div class="d-flex gap-2 ms-3">
+        <button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button>
+        <button type="button" class="btn btn-outline-primary"><i class="bi bi-calendar"></i> Agendar</button>
       </div>
     </div>
   </div>
