--- a/paciente/cadastro.html
+++ b/paciente/cadastro.html
@@ -5,34 +5,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FisioVida - Cadastro</title>
-  <link rel="icon" href="../img/Fisiovida logo.png" />
+  <link rel="icon" href="img/Fisiovida logo.png" />
 
  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
-  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/style.css"/>
 </head>
-<body>
+<body> 
 
   <!-- Seção Cadastro -->
   <div class="container my-5">
     <h2 class="text-center mb-4">Cadastro de Paciente</h2>
     <p class="text-center">Crie sua conta para agendar sessões e acompanhar sua evolução.</p>
   
-    <form class="row g-3 mt-4" novalidate>
+    <form class="row g-3 mt-4" novalidate action="cadastro.php" method="POST" >
       <div class="col-md-6">
         <label for="nome" class="form-label">Nome Completo:</label>
-        <input type="text" class="form-control" id="nome" placeholder="Seu nome completo" required />
+        <input type="text" class="form-control" id="nome" name="nome" placeholder="Seu nome completo" required />
       </div>
       <div class="col-md-6">
         <label for="gmail" class="form-label">Gmail:</label>
-        <input type="email" class="form-control" id="gmail" placeholder="exemplo@gmail.com" required />
+        <input type="email" class="form-control" id="gmail" name="email" placeholder="exemplo@gmail.com" required />
       </div>
       <div class="col-md-6">
         <label for="senha" class="form-label">Senha:</label>
-        <input type="password" class="form-control" id="senha" placeholder="Crie uma senha" required />
+        <input type="password" class="form-control" id="senha" name="senha" placeholder="Crie uma senha" required />
       </div>
       <div class="col-md-6">
         <label for="dataNascimento" class="form-label">Data de Nascimento:</label>
@@ -40,11 +40,11 @@
       </div>
       <div class="col-12">
         <label for="endereco" class="form-label">Endereço:</label>
-        <input type="text" class="form-control" id="endereco" placeholder="Rua, número, bairro, cidade" required />
+        <input type="text" class="form-control" id="endereco" name="endereco" placeholder="Rua, número, bairro, cidade" required />
       </div>
       <div class="col-md-6">
         <label for="cpf" class="form-label">CPF:</label>
-        <input type="text" class="form-control" id="cpf" placeholder="000.000.000-00" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" />
+        <input type="text" class="form-control" id="cpf" nome="CPF" placeholder="000.000.000-00" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" />
       </div>
   
       <div class="col-12 text-center">
@@ -65,5 +65,6 @@
   <!-- Seu JS customizado -->
   <script src="/FisioVida/js/main.js"></script>
 
+
 </body>
-</html>
+</html> 
