--- a/paciente/index.html
+++ b/paciente/index.html
@@ -67,8 +67,9 @@
         <li class="nav-item"><a href="contato.html" class="nav-link">CONTATO</a></li>
       </ul>
 
-      <div class="d-flex">
-        <a href="login.html" class="btn btn-outline-primary">LOGIN</a>
+      <div class="d-flex gap-2 ms-3">
+        <a href="./login.html"><button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button></a>
+        <button type="button" class="btn btn-outline-primary"><i class="bi bi-calendar"></i> Agendar</button>
       </div>
     </div>
   </div>
@@ -82,11 +83,11 @@
 
 <div id="carouselExampleIndicators" class="carousel slide">
   <div class="carousel-inner">
-    <div class="carousel-item" style="background-color: rgb(26, 33, 44);">
+    <div class="carousel-item active" style="background-color: rgb(26, 33, 44);">
       <img src="../img/Imagem de fisioterapia.png" class="d-block w-100 opacity-25" alt="image">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center" style="position: absolute; top: 10%;">
         <div class="p-3" style="max-width: 900px;">
-          <h5 class="text-white bg-success text-uppercase mb-2 p-1 rounded opacity-75">FisioVida</h5>
+          <h5 class="text-white text-uppercase mb-3 p-1 rounded fs-2 texto-animado">FisioVida</h5>
             <h1 class="display-5 text-white mb-md-2">Cuide da sua saúde hoje mesmo, agende sua sessão de fisioterapia online com rapidez e segurança!</h1>
             <div class="position-relative" style="position: absolute; right: 2%;">
             <button type="button" class="btn btn-primary btn-lg p-3 py-md-3 px-md-5 me-3">Agendar agora</button>
@@ -95,11 +96,11 @@
         </div>
       </div>
     </div>
-    <div class="carousel-item active" style="background-color: rgb(26, 33, 44);">
+    <div class="carousel-item" style="background-color: rgb(26, 33, 44);">
       <img src="../img/Imagem de fisioterapia 2.png" class="d-block w-100 opacity-25" alt="image">
         <div class="carousel-caption d-flex flex-column align-items-center justify-content-center" style="position: absolute; top: 10%;">
         <div class="p-3" style="max-width: 900px;">
-          <h5 class="text-white bg-success text-uppercase mb-2 p-1 rounded opacity-75">FisioVida</h5>
+          <h5 class="text-white text-uppercase mb-3 p-1 rounded fs-2 texto-animado">FisioVida</h5>
             <h1 class="display-5 text-white mb-md-2">Saúde e recuperação em primeiro lugar, fisioterapia profissional que você pode confiar.</h1>
              <div class="position-relative" style="position: absolute; right: 2%;">
             <button type="button" class="btn btn-primary btn-lg p-3 py-md-3 px-md-5 me-3">Agendar agora</button>
