--- a/paciente/cadastro.html
+++ b/paciente/cadastro.html
@@ -44,7 +44,7 @@
       </div>
       <div class="col-md-6">
         <label for="cpf" class="form-label">CPF:</label>
-        <input type="text" class="form-control" id="cpf" nome="CPF" placeholder="000.000.000-00" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" />
+        <input type="text" class="form-control" id="cpf" nome="cpf" placeholder="000.000.000-00" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" />
       </div>
   
       <div class="col-12 text-center">
