--- a/site/contato.html
+++ b/site/contato.html
@@ -55,15 +55,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="menunavbar">
       <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
         <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
-        <li class="nav-item"><a href="equipe.html" class="nav-link">EQUIPE</a></li>
         <li class="nav-item"><a href="servico.html" class="nav-link">SERVIÇOS</a></li>
         <li class="nav-item"><a href="sobre.html" class="nav-link">SOBRE</a></li>
         <li class="nav-item"><a href="contato.html" class="nav-link active">CONTATO</a></li>
       </ul>
 
       <div class="d-flex gap-2 ms-3">
-        <button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button>
-        <button type="button" class="btn btn-outline-primary"><i class="bi bi-calendar"></i> Agendar</button>
+        <a href="./login.html"><button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button></a>
       </div>
     </div>
   </div>
