--- a/site/index.html
+++ b/site/index.html
@@ -61,7 +61,6 @@
     <div class="collapse navbar-collapse justify-content-end" id="menunavbar">
       <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
         <li class="nav-item"><a href="index.html" class="nav-link active">HOME</a></li>
-        <li class="nav-item"><a href="equipe.html" class="nav-link">EQUIPE</a></li>
         <li class="nav-item"><a href="servico.html" class="nav-link ">SERVIÇOS</a></li>
         <li class="nav-item"><a href="sobre.html" class="nav-link">SOBRE</a></li>
         <li class="nav-item"><a href="contato.html" class="nav-link">CONTATO</a></li>
@@ -69,7 +68,6 @@
 
       <div class="d-flex gap-2 ms-3">
         <a href="./login.html"><button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button></a>
-        <button type="button" class="btn btn-outline-primary"><i class="bi bi-calendar"></i> Agendar</button>
       </div>
     </div>
   </div>
@@ -90,7 +88,7 @@
           <h5 class="text-white text-uppercase mb-3 p-1 rounded fs-2 texto-animado">FisioVida</h5>
             <h1 class="display-5 text-white mb-md-2">Cuide da sua saúde hoje mesmo, agende sua sessão de fisioterapia online com rapidez e segurança!</h1>
             <div class="position-relative" style="position: absolute; right: 2%;">
-            <button type="button" class="btn btn-primary btn-lg p-3 py-md-3 px-md-5 me-3">Agendar agora</button>
+            <a href="./login.html"><button type="button" class="btn btn-primary btn-lg p-3 py-md-3 px-md-5 me-3">Agendar agora</button></a>
             <a href="./sobre.html"><button type="button" class="btn btn-secondary btn-lg p-3 py-md-3 px-md-5 me-3">Saiba mais</button></a>
             </div>
         </div>
@@ -103,7 +101,7 @@
           <h5 class="text-white text-uppercase mb-3 p-1 rounded fs-2 texto-animado">FisioVida</h5>
             <h1 class="display-5 text-white mb-md-2">Saúde e recuperação em primeiro lugar, fisioterapia profissional que você pode confiar.</h1>
              <div class="position-relative" style="position: absolute; right: 2%;">
-            <button type="button" class="btn btn-primary btn-lg p-3 py-md-3 px-md-5 me-3">Agendar agora</button>
+            <a href="./login.html"><button type="button" class="btn btn-primary btn-lg p-3 py-md-3 px-md-5 me-3">Agendar agora</button></a>
             <a href="./sobre.html"><button type="button" class="btn btn-secondary btn-lg p-3 py-md-3 px-md-5 me-3">Saiba mais</button></a>
             </div>
         </div>
@@ -144,7 +142,7 @@
             <h6 class="mb-0">Domingo</h6>
             <p class="mb-0">8:00 - 16:00</p>
           </div>
-          <a class="btn btn-light mt-auto" href="">Realizar Agendamento</a>
+          <a class="btn btn-light mt-auto" href="./login.html">Realizar Agendamento</a>
         </div>
       </div>
 
