--- a/site/servico.html
+++ b/site/servico.html
@@ -55,15 +55,13 @@
     <div class="collapse navbar-collapse justify-content-end" id="menunavbar">
       <ul class="navbar-nav mb-2 mb-lg-0 d-flex align-items-center">
         <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
-        <li class="nav-item"><a href="equipe.html" class="nav-link">EQUIPE</a></li>
         <li class="nav-item"><a href="servico.html" class="nav-link active">SERVIÇOS</a></li>
         <li class="nav-item"><a href="sobre.html" class="nav-link">SOBRE</a></li>
         <li class="nav-item"><a href="contato.html" class="nav-link">CONTATO</a></li>
       </ul>
 
       <div class="d-flex gap-2 ms-3">
-        <button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button>
-        <button type="button" class="btn btn-outline-primary"><i class="bi bi-calendar"></i> Agendar</button>
+        <a href="./login.html"><button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button></a>
       </div>
     </div>
   </div>
@@ -225,7 +223,7 @@
               <h5 class="text-uppercase mb-0">Redes sociais</h5>
               <ul class="list-unstyled d-flex justify-content-start gap-3 mt-3">
                 <li><a href="#!" class="text-dark"><i class="bi bi-facebook fs-4"></i></a></li>
-                <li><a href="#!" class="text-dark"><i class="bi bi-instagram fs-4"></i></a></li>
+                <li><a href="https://www.instagram.com/fisiovida515" class="text-dark"><i class="bi bi-instagram fs-4"></i></a></li>
                 <li><a href="#!" class="text-dark"><i class="bi bi-twitter fs-4"></i></a></li>
               </ul>
             </div>
