--- a/site/contato.html
+++ b/site/contato.html
@@ -61,7 +61,7 @@
       </ul>
 
       <div class="d-flex gap-2 ms-3">
-        <a href="./login.html"><button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button></a>
+        <a href="./login.php"><button type="button" class="btn btn-outline-primary"><i class="bi bi-person-fill"></i> Login</button></a>
       </div>
     </div>
   </div>
