--- a/site/servico.html
+++ b/site/servico.html
@@ -57,7 +57,7 @@
         <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
         <li class="nav-item"><a href="servico.html" class="nav-link active">SERVIÇOS</a></li>
         <li class="nav-item"><a href="sobre.html" class="nav-link">SOBRE</a></li>
-        <li class="nav-item"><a href="contato.html" class="nav-link">CONTATO</a></li>
+        <li class="nav-item"><a href="contato.php" class="nav-link">CONTATO</a></li>
       </ul>
 
       <div class="d-flex gap-2 ms-3">
@@ -208,15 +208,6 @@
                 Telefone: +55 12 3456-7890<br>
                 Email: contato@fisiovida.com.br
               </p>
-            </div>
-            
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-              <h5 class="text-uppercase">Links úteis</h5>
-              <ul class="list-unstyled mb-0">
-                <li><a href="#!" class="text-dark">Política de Privacidade</a></li>
-                <li><a href="#!" class="text-dark">Termos de Uso</a></li>
-                <li><a href="#!" class="text-dark">Contato</a></li>
-              </ul>
             </div>
             
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
