--- a/site/sobre.html
+++ b/site/sobre.html
@@ -59,7 +59,7 @@
         <li class="nav-item"><a href="index.html" class="nav-link">HOME</a></li>
         <li class="nav-item"><a href="servico.html" class="nav-link ">SERVIÇOS</a></li>
         <li class="nav-item"><a href="sobre.html" class="nav-link active">SOBRE</a></li>
-        <li class="nav-item"><a href="contato.html" class="nav-link">CONTATO</a></li>
+        <li class="nav-item"><a href="contato.php" class="nav-link">CONTATO</a></li>
       </ul>
 
       <div class="d-flex gap-2 ms-3">
@@ -112,8 +112,8 @@
           </ul>
 
           <div class="text-center mt-5">
-              <a href="contato.html" class="btn btn-success btn-lg px-4 py-2">
-                  Fale Conosco <i class="bi bi-arrow-right ms-2"></i>
+              <a href="contato.php" class="btn btn-success btn-lg px-4 py-2">
+                  Avalie-nos <i class="bi bi-arrow-right ms-2"></i>
               </a>
           </div>
       </div>
@@ -134,15 +134,6 @@
                 Telefone: +55 12 3456-7890<br>
                 Email: fisiovidarmnf@gmail.com
               </p>
-            </div>
-            
-            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-              <h5 class="text-uppercase">Links úteis</h5>
-              <ul class="list-unstyled mb-0">
-                <li><a href="#!" class="text-dark">Política de Privacidade</a></li>
-                <li><a href="#!" class="text-dark">Termos de Uso</a></li>
-                <li><a href="#!" class="text-dark">Contato</a></li>
-              </ul>
             </div>
             
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
