--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
 </head>
     <link rel="stylesheet" href="../css/style.css">
     <title> Fisiovida</title>
-    <link rel="icon" href="../img/Fisiovida logo.png">
+    <link rel="icon" href="../img/Icone fisiovida.jfif">
     <style>
         
     </style>
