--- a/site/index.html
+++ b/site/index.html
@@ -213,7 +213,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10">
-                  <h1 class="text-center text-white py-1 fs-2 bg-danger rounded">Nosso hambiente sempre será o mais acolhedor e confortavel possivel para a melhor experiência.</h1>
+                  <h1 class="text-center text-white py-1 fs-2 bg-danger rounded">Nosso ambiente sempre será o mais acolhedor e confortavel possivel para a melhor experiência.</h1>
                     <div id="carouselExample" class="carousel slide">
                       <div class="carousel-inner">
                         <div class="carousel-item">
