--- a/site/servico.html
+++ b/site/servico.html
@@ -156,7 +156,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link active" href="servico.html">SERVIÇOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobre.html">SOBRE</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contato.html">CONTATO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="avaliacao.php">CONTATO</a></li>
                     <li class="nav-item ms-lg-3">
                         <a href="./login.php"><button class="btn btn-outline-primary"><i class="bi bi-person-fill me-2"></i>Login</button></a>
                     </li>
