--- a/site/servico.html
+++ b/site/servico.html
@@ -22,113 +22,12 @@
     <!-- AOS Animation Library -->
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-
-    <!-- Estilo principal (mesmo da página inicial) -->
-    <style>
-        :root {
-            --azul-base: #b3e5fc;
-            --azul-escuro: #0288d1;
-            --bg-soft: linear-gradient(135deg, #f5fbff, #eaf8ff);
-            --glass: rgba(255, 255, 255, 0.72);
-            --muted: #6b7280;
-        }
-
-        html, body {
-            height: 100%;
-            font-family: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-            background: var(--bg-soft);
-            color: #0f172a;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-        }
-
-        .top-info {
-            background: transparent;
-            color: var(--muted);
-            font-size: .92rem;
-        }
-
-        .top-info .contact-pill {
-            background: var(--azul-base);
-            color: #0b3b56;
-            border-radius: 8px;
-            padding: .35rem .9rem;
-            font-weight: 600;
-        }
-
-        .navbar {
-            background: rgba(255, 255, 255, 0.85);
-            backdrop-filter: blur(6px);
-            box-shadow: 0 6px 18px rgba(9, 30, 63, 0.06);
-        }
-
-        .navbar .nav-link {
-            color: #0b3b56;
-            font-weight: 600;
-        }
-
-        .navbar .btn-outline-primary {
-            border-color: transparent;
-            background: transparent;
-            color: var(--azul-escuro);
-            border-radius: 30px;
-        }
-
-        .navbar .btn-outline-primary:hover {
-            background: var(--azul-base);
-            color: #033748;
-        }
-
-        /* Serviço Cards */
-        #servicos h1 {
-            color: var(--azul-escuro);
-            font-weight: 700;
-        }
-
-        #servicos .card {
-            border-radius: 14px;
-            box-shadow: 0 10px 30px rgba(2, 24, 56, 0.06);
-            transition: transform .3s ease, box-shadow .3s ease;
-            background: rgba(255, 255, 255, 0.9);
-        }
-
-        #servicos .card:hover {
-            transform: translateY(-6px);
-            box-shadow: 0 16px 40px rgba(2, 24, 56, 0.09);
-        }
-
-        #servicos h4 {
-            color: var(--azul-escuro);
-        }
-
-    /* Footer */
-    footer {
-            background: #ffffff;
-            color: #243b4a;
-        }
-
-        footer .bg-secondary {
-            background: var(--azul-escuro) !important;
-        }
-
-    footer a:hover {
-      color: var(--azul-escuro);
-    }
-
-    /* Responsividade */
-    @media (max-width: 991px) {
-      .navbar .nav-link {
-        text-align: center;
-        padding: 0.8rem 0;
-      }
-    }
-    </style>
+    <!-- Link css -->
+    <link rel="stylesheet" href="../css/servico.css">
 </head>
-
 <body>
     <!-- Top info bar -->
     <div class="container-fluid top-info py-2 d-none d-lg-block">
-        <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <small><i class="bi bi-clock me-2"></i>Aberto de Segunda a Sexta das 8:00 às 18:00</small>
@@ -138,31 +37,29 @@
                     <span class="contact-pill"><i class="bi bi-telephone me-1"></i> +012 345 6789</span>
                 </div>
             </div>
-        </div>
     </div>
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg sticky-top py-3">
-        <div class="container">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="../img/Fisiovida logo.png" alt="Fisiovida" width="110" height="78" style="object-fit:contain;">
             </a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menunavbar" aria-controls="menunavbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
             <div class="collapse navbar-collapse" id="menunavbar">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="servico.html">SERVIÇOS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="servico.html">SERVIÇOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobre.html">SOBRE</a></li>
-                    <li class="nav-item"><a class="nav-link" href="avaliacao.php">CONTATO</a></li>
+                    <li class="nav-item"><a class="nav-link" href="avaliacao.php">AVALIAÇÃO</a></li>
                     <li class="nav-item ms-lg-3">
                         <a href="./login.php"><button class="btn btn-outline-primary"><i class="bi bi-person-fill me-2"></i>Login</button></a>
                     </li>
                 </ul>
             </div>
-        </div>
     </nav>
 
     <!-- Conteúdo principal -->
