--- a/site/index.html
+++ b/site/index.html
@@ -49,12 +49,12 @@
       </button>
 
             <div class="collapse navbar-collapse" id="menunavbar">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center text-center">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="servico.html">SERVIÇOS</a></li>
                     <li class="nav-item"><a class="nav-link" href="sobre.html">SOBRE</a></li>
                     <li class="nav-item"><a class="nav-link" href="avaliacao.php">AVALIAÇÃO</a></li>
-                    <li class="nav-item ms-lg-3">
+                    <li class="nav-item ms-lg-3 text-center">
                         <a href="./login.php"><button class="btn btn-outline-primary"><i class="bi bi-person-fill me-2"></i>Login</button></a>
                     </li>
                 </ul>
