--- a/site/sobre.html
+++ b/site/sobre.html
@@ -101,7 +101,7 @@
         </ul>
 
         <div class="text-center mt-5" data-aos="zoom-in" data-aos-delay="200">
-          <a href="contato.php" class="btn btn-success btn-lg px-4 py-2">
+          <a href="avaliacao.php" class="btn btn-success btn-lg px-4 py-2">
             Avalie-nos <i class="bi bi-arrow-right ms-2"></i>
           </a>
         </div>
