--- a/site/index.html
+++ b/site/index.html
@@ -40,8 +40,8 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg sticky-top py-3">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="../img/Fisiovida logo.png" alt="Fisiovida" width="110" height="78" style="object-fit:contain;">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="../img/Fisiovida logo.png" alt="Fisiovida" width="150" height="100" style="object-fit:contain;">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menunavbar" aria-controls="menunavbar" aria-expanded="false" aria-label="Toggle navigation">
@@ -134,7 +134,7 @@
                 <option value="4">Respiratória</option>
                 <option value="5">Esportiva</option>
               </select>
-                            <a class="btn btn-sm btn-outline-primary" href="#">Conferir horários</a>
+                            <a class="btn btn-sm btn-outline-primary" href="../site/login.php">Conferir horários</a>
                         </div>
                     </div>
                 </div>
