--- a/site/sobre.html
+++ b/site/sobre.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fisiovida - Sobre</title>
-  <link rel="icon" href="../img/Icone fisiovida.jfif">
+  <link rel="icon" href="../img/Icone fisiovida.png">
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -39,8 +39,8 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg sticky-top py-3">
-            <a class="navbar-brand d-flex align-items-center" href="#">
-                <img src="../img/Fisiovida logo.png" alt="Fisiovida" width="110" height="78" style="object-fit:contain;">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="../img/Fisiovida logo.png" alt="Fisiovida" width="150" height="100" style="object-fit:contain;">
             </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menunavbar" aria-controls="menunavbar" aria-expanded="false" aria-label="Toggle navigation">
